# parameter-golf

./: .gitignore  .repoignore  README.md  pyproject.toml  train_gpt.py  train_gpt_mlx.py
records/track_10min_16mb/2026-04-02_HeteroOrdering_LRPeak/: README.md  submission.json  train_gpt.py
